ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ArrayLiteralExpressions/parserErrorRecoveryArrayLiteralExpression3/input.ts.stderr
error[1005]: Expected ','
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ArrayLiteralExpressions/parserErrorRecoveryArrayLiteralExpression3/input.ts:2:54
  |
2 | var texCoords = [2, 2, 0.5000001192092895, 0.8749999 ; 403953552, 0.5000001192092895, 0.8749999403953552];
  |                                                      ^

